feat(gc-log-analyzer): add startup period analysis and detailed G1GC metrics
Add comprehensive startup period analysis to distinguish between
startup-phase behaviors and steady-state problems. Include checks
for JIT compilation warming, metaspace population, and adaptive
collector learning during first 3-5 minutes.

Enhance GC log parser with detailed G1GC metrics including:
- CPU utilization calculations from [Times] output
- GC worker thread analysis
- Object copy timing metrics
- Worker start synchronization delays
- Survivor threshold tracking
- Non-GC safepoint pause detection

Update skill documentation with 5-step analysis process covering
temporal context validation and startup vs steady-state
differentiation guidelines.

Add startup_analysis output to parsed results with comparative
metrics between startup and steady phases.